fix: site displays properly on mobile devices with <400px of width

--- a/css/styles.css
+++ b/css/styles.css
@@ -432,3 +432,12 @@ nav h2 a {
     height: 10px;
   }
 }
+
+@media screen and (max-width: 400px) {
+  .logoText {
+    font-size: 3vw;
+    line-height: 180%;
+  }
+}
+
+
